--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.dll
 *.so
 *.dylib
+*_templ.go
+*_templ.txt
 
 # Test binary, built with `go test -c`
 *.test
@@ -23,3 +25,10 @@ go.work.sum
 
 # env file
 .env
+!**/.gitignore
+
+node_modules
+tmp
+styles.css
+testdata/
+app
